         capability so Fuse can deal with weak data if it present in the disk
         image (EDSK/UDI) (patch #2927624) (Gergely Szasz).
20100215 ui/gtk/gtkkeyboard.c: account for group setting on key events to make
         intertional keyboards work based on key positions rather than default
         symbol (patch #2951275) (Michal Jurica).
20100302 ui/gtk/gtkui.c: implement drag and drop support (patch #2961519)
         (Dmitry Semyonov).
20100506 debugger/{command.c,debugger_internals.h},ula.c: fix gcc 4.4 warnings.
20100515 disk/upd_fdc.c: fix valgrind warning.
20100515 ChangeLog: update.
20100516 ui/ui.h: include widget.h if we are going to refer to widget_finish()
         (Fred)
20100516 ui/widget/menu.c: supply a format to avoid warnings (Fred)
20100516 debugger/commandl.l: have a second go at eliminating warnings when
         calling debugger_command_input() on platforms where yy_size_t isn't an
         int in a way that works for platforms where it is (Fred)
20100519 disk/{beta.c,fdd.[ch],opus.c,plusd.c},machines/specplus3.c,
         settings.dat: extend 80 track drives to accept disks up to 84 tracks
         and 40 track drives to accept disks up to 42 tracks. Also add options
         to allow these limits to be overridden (fixes bug #3002653) (Gergely
         Szasz).
20100520 ChangeLog,README,configure.in,man/fuse.1: merge Release_0_10_0-branch
         changes from 0.10.0.2 onto trunk (Fred).
20100521 ChangeLog: remove duplicate entry (Fred).
20100522 sound.c: allow a little more treble in the TV Speaker mode (Fred).
20100527 sound/coreaudiosound.c: add some casts in output statements to avoid
         annoying warnings about format mismatches (Fred).
20100530 ChangeLog: remove another duplicate entry (Fred).
20100627 ui/gtk/gtkdisplay.c: ensure an appropriate scaler is selected when
         the Fuse window is resized by the user.
20100719 disk/disk.c: set track lengths when inserting a new disk (fixes bug
         #3031299) (Gergely Szasz).